<resources>
    <string name="principal">Sincelejo</string>
    <string name="principal1">*Perla de la sabana</string>
    <string name="principal2">*Capital mundial del fandango</string>
    <string name="principal3">Sincelejo-Sucre</string>
    <string name="hoteles">Hoteles</string>
    <string name="app_name">Sincelejoturistica</string>
    <string name="exposiciones">Exposiciones</string>
    <string name="title_activity_bares">bares</string>
    <string name="hoteles1">Hoteles De Sincelejo</string>
    <string name="hotel1">Hotel Arawaw</string>
    <string name="hotel1dire">Dirección: Cl 32 # 29-32 Av Sincelejito</string>
    <string name="hotel1tel">Telefono: (5) 2804817</string>
    <string name="hotel2">Hotel Carivdi</string>
    <string name="hotel2dire">Dirección: Cr 24 # 20-20 Centro</string>
    <string name="hotel2tel">Telefono: (5) 2811065 </string>
    <string name="hotel3">Hotel Panorama</string>
    <string name="hotel3dire">Dirección: Cra 25 No 23-108 Av las PEÑITAS </string>
    <string name="hotel3tel">Telefono: (5) 2821884 </string>
    <string name="Bares">Bares</string>
    <string name="Discos">Bares de Sincelejo</string>
    <string name="Bares1">Hawaiw Club</string>
    <string name="Bares1dire">Dirección: Cl 24 # 14-78 Av Bucaramanga</string>
    <string name="Bares1Tema">Tematica: Crossover</string>
    <string name="Bares2">Kantaleta Bar</string>
    <string name="Bares2dire">Dirección: Cl 25 # 27c-105 Av Mariscal</string>
    <string name="Bares2Tema">Tematica: Crossover </string>
    <string name="Bares3">Mulata Beer</string>
    <string name="Bares3dire">Dirección: Cl 20 #24-100 Av Las peñita </string>
    <string name="Bares3Tema">Tematica: Crossover </string>
    <string name="Sitios">Sitios Turisticos</string>
    <string name="Lugares">Sitios Turisticos de Sincelejo</string>
    <string name="Sitio1">Plaza De Majagual</string>
    <string name="Sitio1dire">Dirección: Crr 17 # 28-25 B. Majagual</string>
    <string name="Apodo1">Apodo: La plazita</string>
    <string name="Sitio2">Coliseo de Ferias</string>
    <string name="Sitio2dire">Dirección: Cl 28 # 14-78 Av Luis Carlos Galan</string>
    <string name="Apodo2">Apodo: El coli</string>
    <string name="Sitio3">Pozo de majagual</string>
    <string name="Sitio3dire">Dirección: Cl 17 # 28-12 B. Majagual</string>
    <string name="Apodo3">Apodo: El pozito</string>
    <string name="Demografia">Demografia</string>
    <string name="Demo">Demografia Sincelejo</string>
    <string name="Acerca">Acerca De</string>
    <string name="Acerca1">*Creador:</string>
    <string name="Acerca2">Jorge andres Bertel Gil</string>
    <string name="Acerca3">Curso de Dispositivos Moviles</string>
    <string name="Acerca4">Facultad de Ingenieria</string>
    <string name="Acerca5">Universidad de Antioquia</string>
    <string name="Acerca6">Medellin-Antioquia</string>
    <string name="Acerca7">2016</string>
    <string name="informacion">Sincelejo es un municipio colombiano, capital del departamento de Sucre. Está ubicado al noroeste del país, en la Costa Caribe colombiana exactamente en la sub-región Sabanas en el departamento de Sucre. Es la vigésima cuarta ciudad más poblada de Colombia.</string>
    <string name="informacion1">Demografia Actual:</string>
    <string name="informacion2">Poblacion Total:    279 027 hab</string>
    <string name="informacion3">Poblacion Urbana:   261 508 hab</string>
</resources>
