<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.colombiaturistica.acerca">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Acerca"
                android:textColor="@color/orangered"
                android:textAppearance="@color/red"
                android:textStyle="italic"
                android:textSize="35dp"
                android:gravity="center"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Acerca1"
                android:textColor="@color/orangered"
                android:textAppearance="@color/red"
                android:textStyle="italic"
                android:textSize="20dp"
                android:gravity="center"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Acerca2"
                android:textColor="@color/orangered"
                android:textAppearance="@color/red"
                android:textStyle="italic"
                android:textSize="20dp"
                android:gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Acerca3"
                android:textColor="@color/orangered"
                android:textAppearance="@color/red"
                android:textStyle="italic"
                android:textSize="20dp"
                android:gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Acerca4"
                android:textColor="@color/orangered"
                android:textAppearance="@color/red"
                android:textStyle="italic"
                android:textSize="20dp"
                android:gravity="center"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Acerca5"
                android:textColor="@color/orangered"
                android:textAppearance="@color/red"
                android:textStyle="italic"
                android:textSize="20dp"
                android:gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Acerca6"
                android:textColor="@color/orangered"
                android:textAppearance="@color/red"
                android:textStyle="italic"
                android:textSize="20dp"
                android:gravity="center"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Acerca7"
                android:textColor="@color/orangered"
                android:textAppearance="@color/red"
                android:textStyle="italic"
                android:textSize="20dp"
                android:gravity="center"/>

        </LinearLayout>

    </ScrollView>
</LinearLayout>


