<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.colombiaturistica.Sitios"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Lugares"
        android:textColor="@color/orangered"
        android:textAppearance="@color/red"
        android:textStyle="italic"
        android:textSize="25dp"
        android:gravity="center"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <ImageView
                    android:src="@drawable/plaza"
                    android:layout_width="match_parent"
                    android:layout_height="123dp"
                    android:layout_weight="1"
                    />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:layout_gravity="center">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Sitio1"
                        android:textColor="@color/orangered"
                        android:textAppearance="@color/red"
                        android:textStyle="italic"
                        android:textSize="20dp"
                        android:gravity="center"
                        android:layout_weight="1" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Sitio1dire"
                        android:textColor="@color/orangered"
                        android:textAppearance="@color/red"
                        android:textStyle="italic"
                        android:textSize="10dp"
                        android:gravity="center"
                        android:layout_weight="1" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Apodo1"
                        android:textColor="@color/orangered"
                        android:textAppearance="@color/red"
                        android:textStyle="italic"
                        android:textSize="10dp"
                        android:gravity="center"
                        android:layout_weight="1" />
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="start">
                <ImageView
                    android:src="@drawable/coliseo"
                    android:layout_width="match_parent"
                    android:layout_height="123dp"
                    android:layout_weight="1"
                    />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:layout_gravity="center">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Sitio2"
                        android:textColor="@color/orangered"
                        android:textAppearance="@color/red"
                        android:textStyle="italic"
                        android:textSize="20dp"
                        android:gravity="center"
                        android:layout_weight="1" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Sitio2dire"
                        android:textColor="@color/orangered"
                        android:textAppearance="@color/red"
                        android:textStyle="italic"
                        android:textSize="10dp"
                        android:gravity="center"
                        android:layout_weight="1"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Apodo2"
                        android:textColor="@color/orangered"
                        android:textAppearance="@color/red"
                        android:textStyle="italic"
                        android:textSize="10dp"
                        android:gravity="center"
                        android:layout_weight="1"
                        />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="start">
                <ImageView
                    android:src="@drawable/pozo_de_majagual"
                    android:layout_width="match_parent"
                    android:layout_height="123dp"
                    android:layout_weight="1"
                    />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:layout_gravity="center">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Sitio3"
                        android:textColor="@color/orangered"
                        android:textAppearance="@color/red"
                        android:textStyle="italic"
                        android:textSize="20dp"
                        android:gravity="center"
                        android:layout_weight="1" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Sitio3dire"
                        android:textColor="@color/orangered"
                        android:textAppearance="@color/red"
                        android:textStyle="italic"
                        android:textSize="10dp"
                        android:gravity="center"
                        android:layout_weight="1"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Apodo3"
                        android:textColor="@color/orangered"
                        android:textAppearance="@color/red"
                        android:textStyle="italic"
                        android:textSize="10dp"
                        android:gravity="center"
                        android:layout_weight="1"
                        />
                </LinearLayout>
            </LinearLayout>


        </LinearLayout>
    </ScrollView>

</LinearLayout>
