<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.colombiaturistica.demografica">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Demo"
        android:textColor="@color/orangered"
        android:textAppearance="@color/red"
        android:textStyle="italic"
        android:textSize="25dp"
        android:gravity="center"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <ImageView
                    android:src="@drawable/bandera"
                    android:layout_width="match_parent"
                    android:layout_height="123dp"
                    android:layout_weight="1"
                    />
                <ImageView
                    android:src="@drawable/escudo"
                    android:layout_width="match_parent"
                    android:layout_height="123dp"
                    android:layout_weight="1"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    >
                    <ImageView
                        android:src="@drawable/mapa1"
                        android:layout_width="match_parent"
                        android:layout_height="123dp"
                        android:layout_weight="1"
                        />
                    <ImageView
                        android:src="@drawable/mapa"
                        android:layout_width="match_parent"
                        android:layout_height="123dp"
                        android:layout_weight="1"
                        />
                </LinearLayout>

            </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/informacion"
                android:textColor="@color/orangered"
                android:textAppearance="@color/red"
                android:textStyle="italic"
                android:textSize="13dp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/informacion1"
                    android:textColor="@color/orangered"
                    android:textAppearance="@color/red"
                    android:textStyle="italic"
                    android:textSize="10dp"
                    android:gravity="center"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/informacion2"
                    android:textColor="@color/orangered"
                    android:textAppearance="@color/red"
                    android:textStyle="italic"
                    android:textSize="10dp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/informacion3"
                    android:textColor="@color/orangered"
                    android:textAppearance="@color/red"
                    android:textStyle="italic"
                    android:textSize="10dp" />

            </LinearLayout>


        </LinearLayout>
    </ScrollView>



</LinearLayout>
